--- a/styles/board.css
+++ b/styles/board.css
@@ -425,9 +425,11 @@ body {
   }
 
   .parentDiv {
+    display: flex;
     flex-direction: column;
     padding-right: 16px;
     padding-left: 16px;
+    padding-top: 25px;
   }
 
   .dropArea {
